--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "amfe-flexible": "^2.2.1",
     "axios": "^0.19.0",
+    "moment": "^2.27.0",
     "v-vuerify-next": "^0.2.0",
     "vue": "^2.6.10",
     "vue-cookie": "^1.1.4",
